--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,39 @@
-version: '3'
+# this docker-compose file must be called from ./x
+## Docker volume owner Problem: https://stackoverflow.com/questions/40462189/docker-compose-set-user-and-group-on-mounted-volume
 
-# Python 3.7 + JupyterNotebook + Julia 1.3 環境
+# ver 3.6 >= required: enable '-w' option for 'docker-compose exec'
+version: "3.8"
+
+networks:
+  # プロジェクト内仮想ネットワーク
+  ## 同一ネットワーク内の各コンテナはサービス名で双方向通信可能
+  appnet:
+    driver: bridge
+    # ネットワークIP範囲を指定する場合
+    # ipam:
+    #   driver: default
+    #   config:
+    #     # 仮想ネットワークのネットワーク範囲を指定
+    #     ## 172.68.0.0/16 の場合、172.68.0.1 ～ 172.68.255.254 のIPアドレスを割り振れる
+    #     ## ただし 172.68.0.1 はゲートウェイに使われる
+    #     - subnet: 172.68.0.0/16
+
 services:
-  jupyter:
-    build:
-      context: ./.jupyter # ./.jupyter/Dockerfile でビルド
-      args:
-        # Docker実行ユーザIDをビルド時に使用
-        UID: $UID
+  # app service container: julia:1.6.1-buster
+  ## http://localhost:{JUPYTER_PORT:-8888} => http://app:8888
+  app:
+    build: ./
+    logging:
+      driver: json-file
+    networks:
+      - appnet
     ports:
-      - 8888:8888 # http://localhost:8888/?token=julia でアクセス可能に
+      - "${JUPYTER_PORT:-8888}:8888"
+    # enable terminal
+    tty: true
     volumes:
-      # 作業ディレクトリ: ./ => docker://jupyter:/var/www/app/ にマウント
-      - ./:/var/www/app/
-    tty: true # コンテナがすぐに終了してしまうのを防ぎ、標準入出力を有効化
-    command: jupyter notebook --ip=0.0.0.0
+      # host://./ => docker://app:/work/
+      - ./:/work/
+    environment:
+      USER_ID: "${USER_ID:-0}"
+      GROUP_ID: "${GROUP_ID:-0}"
