--- a/Project.toml
+++ b/Project.toml
@@ -7,4 +7,6 @@ Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Nettle = "49dea1ee-f6fa-5aa6-9a11-8816cee7d4b9"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
